--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="skills">
     <h2>My Skills.</h2>
     <div class="skill-row">
-      <img class="computer" src="https://cdn-icons.flaticon.com/png/512/3037/premium/3037929.png?token=exp=1651724106~hmac=ba83c31b7d1283fdbc492c038dce3b50" alt="computerIcon">
+      <img class="computer" src="https://cdn-icons-png.flaticon.com/512/1753/1753751.png" alt="computerIcon">
         <img class="" src="" alt="">
         <img class="" src="" alt="">
       <h3>I build things for the web.</h3>
