--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </p>
     </div>
     <div class="skill-row">
-      <img class="paintingicon" src="https://cdn-icons-png.flaticon.com/512/1165/1165800.png" alt="articon">
+      <img class="paintingicon" src="https://cdn-icons.flaticon.com/png/512/3157/premium/3157837.png?token=exp=1651983208~hmac=d018b1a806e0bcb8f46602dfffafff09" alt="articon">
     <h3>Hobbies</h3>
     <p class = "hobbiesdecript">I always had an interest in art and atted Kendall College of Art and Design for some time. Ultimately, I opted to pursue software engineering. I believe that my background in art and design makes me a stronger web developer.  </p>
 
