--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class="middle-container">
   <div class="profile">
-    <img class ="marleticon" src="https://cdn-icons.flaticon.com/png/512/3065/premium/3065577.png?token=exp=1651983407~hmac=dc3abd0a880f598d1cc447cf102e009d" alt="marleticon">
+    <img class ="marleticon" src="https://cdn-icons.flaticon.com/png/512/2763/premium/2763444.png?token=exp=1652730002~hmac=10dbf5ba50cff4922b602a1e9d64c4c4" alt="marleticon">
     <h2>Hello.</h2>
     <p>I love creating things that live on the web. My interest in web design began in the hay-day of tumblr and MySpace when customizing your page was all the rage.
        In 2022 I decided to take the plunge and enroll in a Software Engineering course of study. I love lattes and binging shows.
@@ -42,7 +42,7 @@
       </p>
     </div>
     <div class="skill-row">
-      <img class="paintingicon" src="https://cdn-icons.flaticon.com/png/512/3157/premium/3157837.png?token=exp=1651983208~hmac=d018b1a806e0bcb8f46602dfffafff09" alt="articon">
+      <img class="paintingicon" src="https://cdn-icons-png.flaticon.com/512/4539/4539193.png" alt="articon">
     <h3>Hobbies</h3>
     <p class = "hobbiesdecript">I always had an interest in art and atted Kendall College of Art and Design for some time. Ultimately, I opted to pursue software engineering. I believe that my background in art and design makes me a stronger web developer.  </p>
 
