--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="skill-row">
       <img class="paintingicon" src="https://cdn-icons-png.flaticon.com/512/4539/4539193.png" alt="articon">
     <h3>Hobbies</h3>
-    <p class = "hobbiesdecript">I always had an interest in art and atted Kendall College of Art and Design for some time. Ultimately, I opted to pursue software engineering. I believe that my background in art and design makes me a stronger web developer.  </p>
+    <p class = "hobbiesdecript">I always had an interest in art and attended Kendall College of Art and Design for some time. Ultimately, I opted to pursue software engineering. I believe that my background in art and design makes me a stronger web developer.  </p>
 
     </div>
   </div>
