--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class="middle-container">
   <div class="profile">
-    <img class ="marleticon" src="https://cdn-icons.flaticon.com/png/512/2763/premium/2763444.png?token=exp=1652730002~hmac=10dbf5ba50cff4922b602a1e9d64c4c4" alt="marleticon">
+    <img class ="marleticon" src="https://w7.pngwing.com/pngs/129/292/png-transparent-female-avatar-girl-face-woman-user-flat-classy-users-icon.png" alt="marleticon">
     <h2>Hello.</h2>
     <p>I love creating things that live on the web. My interest in web design began in the hay-day of tumblr and MySpace when customizing your page was all the rage.
        In 2022 I decided to take the plunge and enroll in a Software Engineering course of study. I love lattes and binging shows.
